Fix bug where footer text would wrap to a new line

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1290,12 +1290,14 @@ body:not(.post-template) .post-title {
 
 .poweredby {
     display: block;
+    width: 45%;
     float: right;
     text-align: right;
 }
 
 .copyright {
     display: block;
+    width: 45%;
     float: left;
 }
 
